--- a/ebay_interchange/src/app/app.component.html
+++ b/ebay_interchange/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    Search a car
+    TRaiD  eBay Parts Interchange Search 
   </div>
   <div class="card-body">      
       <form id="passwordForm" class="text-center" (submit) = "searchCarSubmit()" [formGroup]="form_search">
