--- a/ebay_interchange/src/app/app.component.html
+++ b/ebay_interchange/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="card">
+  <div *ngIf = "ebayData_1.length < 1">
+
   <div class="card-header">
     TRaiD  eBay Parts Interchange Search 
   </div>
@@ -35,10 +37,12 @@
             <div class="form-group">
               <label for="Suggestions">Add specifications</label>
               <input formControlName="suggest" type="text" id="suggest" class="form-control" aria-describedby="passwordHelpInline" required>  
-              <div *ngFor="let x of suggestions">
-                {{x}}
+              
+                <mat-chip  *ngFor="let x of suggestions" color="primary">
+                  {{ x }}
+                </mat-chip>
+
               </div>
-            </div>
           </div>
         </div>
       </div>
@@ -48,6 +52,20 @@
           </form>
           </div>
         </div>
+
+        <div *ngIf = "ebayData_1.length > 1">
+
+          <button onClick="window.location.reload();">Refresh Page</button>
+
+          </div>
+        </div>
+   
+        
+
+
+
+
+
       <div *ngIf="err" class="alert alert-danger" role="alert">
             {{err}}
       </div>
@@ -79,6 +97,8 @@
 
 
       <div *ngIf="ebayData_1">
+
+
         
       <div  (click)="onDivClick()">
       <mat-accordion>
